--- a/layouts/about/single.html
+++ b/layouts/about/single.html
@@ -19,8 +19,8 @@
                 <li>Logo Design</li>
                 <li>Identity System</li>
                 <li>Brand Guidelines</li>
-                <li>Editorial</li>
-                <li>Digital Design</li>
+                <li>Editorial & Layout</li>
+                <li>Website Design</li>
                 <li>Print</li>
             </ul>
             <h3>Let's Talk</h3>
