Mobile Image Optimisation

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -11,7 +11,7 @@
             <div class="col-sm-4 col-xs-12 media-outer">
                 <a href="{{ .Permalink }}">
                     <div class="media">
-                        <img src="{{ .Params.thumb }}" alt="{{ .Title }}" class="media-img"></img>
+                        <img src="{{ .Params.thumb }}" alt="{{ .Title }}" class="media-img">
                         <video src="{{ .Params.thumbvid }}" autoplay loop muted alt="{{ .Title }}" class="media-vid"></video>
                     </div>
                     <div class="box">
