--- a/layouts/index.html
+++ b/layouts/index.html
@@ -9,12 +9,37 @@
 
     <div class="row">
         <div class="col-xs-12">
-            <img src="/img/kinnery/kinnery_cards2.jpg" alt="project-img" class="project-img slides fade">
+            <!-- <img src="/img/kinnery/kinnery_cards2.jpg" alt="project-img" class="project-img slides fade">
             <img src="/img/essex/essex_spread3.jpg" alt="project-img" class="project-img slides fade">
             <img src="/img/definition/definition_card1.jpg" alt="project-img" class="project-img slides fade">
             <img src="/img/kader/kader_bag.jpg" alt="project-img" class="project-img slides fade">
             <img src="/img/realise/realise_billboard.jpg" alt="project-img" class="project-img slides fade">
-            <img src="/img/primus/primus_uppercase.jpg" alt="project-img" class="project-img slides fade">
+            <img src="/img/primus/primus_uppercase.jpg" alt="project-img" class="project-img slides fade"> -->
+            <picture>
+                <source media="(max-width: 767px)" srcset="/img/kinnery/kinnery_cards2-mob.jpg">
+                <source media="(min-width: 768px)" srcset="/img/kinnery/kinnery_cards2.jpg">
+                <img src="/img/kinnery/kinnery_cards2.jpg" alt="project-img" class="project-img slides fade">
+            </picture>
+            <picture>
+                <source media="(max-width: 767px)" srcset="/img/essex/essex_spread3-mob.jpg">
+                <source media="(min-width: 768px)" srcset="/img/essex/essex_spread3.jpg">
+                <img src="/img/essex/essex_spread3.jpg" alt="project-img" class="project-img slides fade">
+            </picture>
+            <picture>
+                <source media="(max-width: 767px)" srcset="/img/definition/definition_card1-mob.jpg">
+                <source media="(min-width: 768px)" srcset="/img/definition/definition_card1.jpg">
+                <img src="/img/definition/definition_card1.jpg" alt="project-img" class="project-img slides fade">
+            </picture>
+            <picture>
+                <source media="(max-width: 767px)" srcset="/img/realise/realise_billboard-mob.jpg">
+                <source media="(min-width: 768px)" srcset="/img/realise/realise_billboard.jpg">
+                <img src="/img/realise/realise_billboard.jpg" alt="project-img" class="project-img slides fade">
+            </picture>
+            <picture>
+                <source media="(max-width: 767px)" srcset="/img/primus/primus_uppercase-mob.jpg">
+                <source media="(min-width: 768px)" srcset="/img/primus/primus_uppercase.jpg">
+                <img src="/img/primus/primus_uppercase.jpg" alt="project-img" class="project-img slides fade">
+            </picture>
         </div>
     </div>
 
