--- a/layouts/about/single.html
+++ b/layouts/about/single.html
@@ -30,6 +30,14 @@
             </ul>
             <h3>Work Index</h3>
             <ul class="work-index">
+                <!-- <div class="work-index-item">
+                    <li>Collyhurst Village (2021)</li>
+                    <img src="" alt="">
+                </div> -->
+                <div class="work-index-item">
+                    <li>Yavolo (2021)</li>
+                    <img src="" alt="">
+                </div>
                 <div class="work-index-item">
                     <li>Send (2020)</li>
                     <img src="/img/send/send_thumb.jpg" alt="">
