--- a/layouts/index.html
+++ b/layouts/index.html
@@ -51,9 +51,9 @@
             <div>
                 <h3>Selected Work</h3>
                 <ul class="get-in-touch">
+                    <li><a href="/work/send">Send</a></li>
                     <li><a href="/work/teesworks">Teesworks</a></li>
                     <li><a href="/work/essex">Essex Brewery</a></li>
-                    <li><a href="/work/kinnery">Kinnery</a></li>
                 </ul>
             </div>
 
